@@ -30,16 +30,15 @@
 
 import java.io.StringWriter;
 import java.net.URI;
-import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map.Entry;
 
 import javax.tools.*;
 
 import com.sun.source.tree.CaseTree;
 import com.sun.source.tree.CompilationUnitTree;
+import com.sun.source.tree.PatternCaseLabelTree;
 import com.sun.source.util.JavacTask;
 import com.sun.source.util.TreePathScanner;
 import com.sun.source.util.Trees;
@@ -52,23 +51,29 @@ public class RuleParsingTest {
     }
 
     void testParseComplexExpressions(String sourceVersion) throws Exception {
-        String[] expressions = {
-            "(a)",
-            "a",
-            "a + a",
-            "~a + a",
-            "a = a",
-            "a += a",
-            "a + (a)",
-            "a + (a) b",
-            "true ? a : b",
-            "m(() -> {})",
-            "m(() -> 1)",
-            "m(a -> 1)",
-            "m((t a) -> 1)",
+        enum Type {
+            CONSTANT,
+            PATTERN
+        }
+        record Input(String label, Type type) {}
+        Input[] inputs = {
+            new Input("(a)", Type.CONSTANT),
+            new Input("a", Type.CONSTANT),
+            new Input("a + a", Type.CONSTANT),
+            new Input("~a + a", Type.CONSTANT),
+            new Input("a = a", Type.CONSTANT),
+            new Input("a += a", Type.CONSTANT),
+            new Input("a + (a)", Type.CONSTANT),
+            new Input("a + (a) b", Type.CONSTANT),
+            new Input("true ? a : b", Type.CONSTANT),
+            new Input("m(() -> {})", Type.PATTERN),
+            new Input("m(() -> 1)", Type.PATTERN),
+            new Input("m(a -> 1)", Type.PATTERN),
+            new Input("m((t a) -> 1)", Type.PATTERN),
         };
+        record Span(long start, long end, Type type) {}
         StringBuilder code = new StringBuilder();
-        List<Entry<Long, Long>> spans = new ArrayList<>();
+        List<Span> spans = new ArrayList<>();
         code.append("class Test {\n" +
                     "    void t(int i) {\n");
         for (boolean switchExpr : new boolean[] {false, true}) {
@@ -77,11 +82,11 @@ public class RuleParsingTest {
             } else {
                 code.append("         switch(i) {\n");
             }
-            for (String expr : expressions) {
+            for (Input input : inputs) {
                 code.append("case ");
                 int start = code.length();
-                code.append(expr);
-                spans.add(new SimpleEntry<>((long) start, (long) code.length()));
+                code.append(input.label());
+                spans.add(new Span(start, code.length(), input.type()));
                 code.append(" -> {}");
             }
             code.append("         };\n");
@@ -90,24 +95,35 @@ public class RuleParsingTest {
                     "}\n");
         final JavaCompiler tool = ToolProvider.getSystemJavaCompiler();
         assert tool != null;
-        DiagnosticListener<JavaFileObject> noErrors = d -> { throw new AssertionError(d.getMessage(null)); };
+        DiagnosticListener<JavaFileObject> noErrors = d -> {
+            throw new AssertionError(d.getMessage(null));
+        };
 
         String version = System.getProperty("java.specification.version");
         StringWriter out = new StringWriter();
         JavacTask ct = (JavacTask) tool.getTask(out, null, noErrors,
-            List.of(), null,
+            List.of("--release", version, "--enable-preview"), null,
             Arrays.asList(new MyFileObject(code.toString())));
         CompilationUnitTree cut = ct.parse().iterator().next();
         Trees trees = Trees.instance(ct);
         new TreePathScanner<Void, Void>() {
             @Override
             public Void visitCase(CaseTree node, Void p) {
-                long start = trees.getSourcePositions().getStartPosition(cut, node.getExpression());
-                long end = trees.getSourcePositions().getEndPosition(cut, node.getExpression());
-                if (!spans.remove(new SimpleEntry<>(start, end))) {
+                Span currentSpan;
+                if (node.getExpression() != null) {
+                    long start = trees.getSourcePositions().getStartPosition(cut, node.getExpression());
+                    long end = trees.getSourcePositions().getEndPosition(cut, node.getExpression());
+                    currentSpan = new Span(start, end, Type.CONSTANT);
+                } else {
+                    PatternCaseLabelTree patternCase = (PatternCaseLabelTree) node.getLabels().getFirst();
+                    long start = trees.getSourcePositions().getStartPosition(cut, patternCase.getPattern());
+                    long end = trees.getSourcePositions().getEndPosition(cut, patternCase.getPattern());
+                    currentSpan = new Span(start, end, Type.PATTERN /*XXX*/);
+                }
+                if (!spans.remove(currentSpan)) {
                     throw new AssertionError("Did not find an expression span in expected spans: " +
-                                             start + "-" + end +
-                                             " '" + node.getExpression().toString() + "'");
+                                             currentSpan +
+                                             " '" + node.toString() + "'");
                 }
                 return super.visitCase(node, p);
             }
